deploy/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: couchallenge
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - www.couchallenge.de
      secretName: couchallenge-tls
  rules:
  - host: www.couchallenge.de
    http:
      paths:
      - backend:
          serviceName: game
          servicePort: 80
